--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@ By TheFrederick, 04.04.2022
     <link rel="icon" type="image/png" sizes="32x32" href="./icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./icon/favicon-16x16.png">
     <script type="text/javascript" src="./js/index.js"></script>
+    <script type="text/javascript" src="./js/adds.js"></script>
     <script type="text/javascript" src="./js/click.js"></script>
     <script type="text/javascript" src="./js/canvas.js"></script>
     <script type="text/javascript" src="./js/table.js"></script>
     <script type="text/javascript" src="./js/buttons.js"></script>
 </head>
-<body onload="main()">
+<body onload="main();doAdds()">
     <canvas id="chartCanvas"></canvas>
     <ul id="menu">
         <li onclick="bclick(this)" id="addp">
@@ -65,6 +66,7 @@ By TheFrederick, 04.04.2022
             <td>-</td>
         </tr>
     </table>
+    <img id="addimgs" src="">
     <footer>
         <p>Made with <span style="color: red">&hearts;</span> by <a href="https://github.com/TheFrederick-git" target="_blank">TheFrederick</a><br>
     </footer>
