--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ By TheFrederick, 04.04.2022
     </table>
     <img id="addimgs" src="">
     <footer>
-        <p>Made with <span style="color: red">&hearts;</span> by <a href="https://github.com/TheFrederick-git" target="_blank">TheFrederick</a><br>
+        <p>Made with <span style="color: red" onload="secret()">&hearts;</span> by <a href="https://github.com/TheFrederick-git" target="_blank">TheFrederick</a><br>
     </footer>
 </body>
 </html>
